# PolanyiGraphResearch

./: .dockerignore  .env.example  .gitignore  .mcp.json  AgenticSkills.ipynb  Makefile  README.md  docker-compose.yml  opencode.json  package.json  pnpm-workspace.yaml  pyproject.toml  requirements.txt  start.sh
.claude/skills/neo4j-gds-skill/: SKILL.md
.claude/skills/neo4j-nvl-skill/: README.md
.firecrawl/: scrape-dashboard-patterns.json  scrape-sidebar-ux.json  search-gnn-dashboard.json  search-sidebar-patterns.json
.opencode/plans/: deepseek_json_20260719_1efed3.json  deepseek_json_20260719_ea281b.json  neo4j-graphdb-capability-integration-plan.md  neo4j-utilization-migration.md  ontologyalignment.md  sidebar-and-gnn-plan.md
.opencode/plans/src 2/: App.tsx
Connectors/databricks/: __init__.py  client.py  config.py  langchain_integration.py
Skills/: neo4j-document-import-options.md  ontology-mcp-servers-and-agents.md
Skills/analytics/: README.md
Skills/databricks-skills/databricks-agent-bricks/: SKILL.md
Skills/databricks-skills/databricks-lakeflow-connect/: SKILL.md
Skills/databricks-skills/databricks-metric-views/: SKILL.md
Skills/databricks-skills/databricks-unity-catalog/: SKILL.md
Skills/databricks-skills/databricks-zerobus-ingest/: SKILL.md
Skills/finance/: README.md
Skills/generation/: README.md
Skills/graph/: README.md
Skills/ingestion/: README.md
Skills/llm/: README.md
Skills/neo4j-skills/.claude-plugin/: plugin.json
Skills/neo4j-skills/.codex-plugin/: plugin.json
Skills/neo4j-skills/neo4j-agent-memory-skill/: README.md
Skills/neo4j-skills/neo4j-aura-agent-skill/: SKILL.md
Skills/neo4j-skills/neo4j-aura-graph-analytics-skill/: README.md  SKILL.md
Skills/neo4j-skills/neo4j-aura-provisioning-skill/: SKILL.md
Skills/ontology/: README.md
Skills/reasoning/: README.md
Skills/retrieval/: README.md
Skills/validation/: README.md
agents/coding/: README.md
agents/ontology/: README.md
agents/planner/: README.md
agents/reasoning/: README.md
agents/reporter/: README.md
agents/researcher/: README.md
agents/retrieval/: README.md
agents/supervisor/: README.md
agents/synthesis/: README.md
agents/validator/: README.md
apps/cli/: README.md  main.py
apps/gateway/: README.md
apps/scheduler/: README.md
apps/server/: README.md  main.py
apps/studio/: README.md  package-lock.json  package.json  vite.config.ts
apps/studio-v1/: .gitignore  index.html  package-lock.json  package.json  stryker.config.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.browser.setup.ts  vitest.config.ts  vitest.stryker.config.ts
apps/studio/src/: App.tsx
apps/worker/: README.md
connectors/azure/: README.md
connectors/confluence/: README.md
connectors/databricks/: README.md
connectors/files/: README.md
connectors/github/: README.md
connectors/graphdb/: README.md
connectors/jira/: README.md
connectors/mysql/: README.md
connectors/neo4j/: README.md
connectors/postgres/: README.md
connectors/rest/: README.md
connectors/s3/: README.md
connectors/sharepoint/: README.md
connectors/snowflake/: README.md
connectors/sqlserver/: README.md
docs/: analysis-readmegpt.md  architecture.md  repo-structure.md  snowflake vs databricks.md
docs/archive/: README.md
docs/design/: PRODUCT.md  polanyi-studio-prototype-additions.md  polanyi-studio-prototype.html  polanyi-studio-ui-spec.md
docs/design copy/: polanyi-studio-prototype.html
docs/research/: agentskillsusage.md
examples/: sample-annual-report.md
infrastructure/config/: README.md
infrastructure/deployment/: README.md
infrastructure/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  graphdb-init.sh  graphdb-repo-config.ttl
infrastructure/kubernetes/: README.md
infrastructure/monitoring/: README.md
infrastructure/terraform/: README.md
ingest/: README.md
ingest/generate/: ingestpipeline.md
knowledge/cache/: README.md
knowledge/documents/: README.md
knowledge/embeddings/: README.md
knowledge/graphs/: README.md
knowledge/indexes/: README.md
knowledge/owl/: README.md
knowledge/rdf/: README.md
knowledge/semantic-models/: README.md
knowledge/vectors/: README.md
mcp/clients/: README.md
mcp/registry/: README.md
mcp/servers/: README.md
mcp/transports/: README.md
notebooks/: agent_prompt.txt  financial_demo.db
ontologies/actus/: README.md
ontologies/custom/: README.md
ontologies/dc/: README.md
ontologies/enterprise/: README.md
ontologies/fibo/: README.md
ontologies/mappings/: README.md
ontologies/prov/: README.md
ontologies/schema-org/: README.md
ontologies/skos/: README.md
plans/: ontology-alignment-studio.md  ontology-structural-llm-ranking.md  semantic-agent-specialist-subagents.md
platform/policies/: README.md
platform/prompts/: README.md
platform/skills/: README.md
plugins/ai/: README.md
plugins/community/: README.md
plugins/databricks/: README.md
plugins/enterprise/: README.md
plugins/finance/: README.md
plugins/graphdb/: README.md
plugins/neo4j/: README.md
policies/: README.md
prompts/: README.md
scripts/: README.md
semantics/knowledge/: README.md  sessions.db-shm  sessions.db-wal
src/graphos/: agent.py  api.py  capabilities.py  cli.py  demo.py  documents.py  generate.py  ingest.py  introspect.py  knowledge_graph.py  llm.py  models.py  ontology.py  owl.py  prompt.py  rdf.py
tests/: test_agent.py  test_agent_sessions.py  test_api.py  test_capabilities.py  test_demo.py  test_documents.py  test_generate.py  test_introspect.py  test_knowledge_graph.py  test_ontology.py  test_owl.py  test_prompt.py  test_rdf.py  test_validate.py
tests/benchmark/: README.md
tests/unit/: test_api.py  test_generate.py  test_ontology.py  test_validate.py
tools/: README.md
ui/: index.html  package.json  tailwind.config.js
ui/src/: App.tsx
workflows/analysis/: README.md
workflows/finance/: README.md
workflows/graph-rag/: README.md
workflows/ingestion/: README.md
workflows/ontology/: README.md
workflows/reporting/: README.md
workflows/research/: README.md
(+309 files in other folders)
