[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphos"
version = "0.1.0"
description = "GraphOS — semantic runtime that grounds AI agents in your database schemas, business glossary, and business rules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langchain-community>=0.4",
    "langgraph>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tenacity>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.120",
    "databricks-sql-connector>=4.0",
    "pyarrow>=15.0",
]
graph = ["neo4j>=5.0"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
graphos = "graphos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
