[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphos"
version = "0.1.0"
description = "GraphOS — semantic runtime that grounds AI agents in your database schemas, business glossary, and business rules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langchain-community>=0.4",
    "langgraph>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tenacity>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.120",
    "databricks-sql-connector>=4.0",
    "pyarrow>=15.0",
]
graph = ["neo4j>=5.0"]
semantic = ["rdflib>=7.0", "pyshacl>=0.25", "pyoxigraph>=0.4", "owlready2>=0.45"]
all = ["graphos[databricks,graph,semantic]"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4", "graphos[all]"]

[project.scripts]
graphos = "graphos.cli:main"

# One installable distribution; the graphos namespace is assembled from the
# monorepo packages/ and apps/ trees (see docs/repo-structure.md).
[tool.setuptools]
packages = [
    "graphos",
    "graphos.kernel",
    "graphos.semantic",
    "graphos.agents",
    "graphos.execution",
    "graphos.execution.connectors",
    "graphos.execution.connectors.databricks",
    "graphos.memory",
    "graphos.api",
    "graphos.cli",
]

[tool.setuptools.package-dir]
"graphos" = "packages/common/graphos"
"graphos.kernel" = "packages/kernel/graphos/kernel"
"graphos.semantic" = "packages/semantic-runtime/graphos/semantic"
"graphos.agents" = "packages/agent-runtime/graphos/agents"
"graphos.execution" = "packages/execution-runtime/graphos/execution"
"graphos.execution.connectors" = "packages/execution-runtime/graphos/execution/connectors"
"graphos.execution.connectors.databricks" = "packages/execution-runtime/graphos/execution/connectors/databricks"
"graphos.memory" = "packages/memory-runtime/graphos/memory"
"graphos.api" = "apps/server/graphos/api"
"graphos.cli" = "apps/cli/graphos/cli"

[tool.setuptools.package-data]
"graphos.semantic" = ["shapes/*.ttl"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps", "infrastructure/tests"]
norecursedirs = ["node_modules", "dist", ".venv", "*.egg-info"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["packages", "apps", "tests"]
