[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polanyi-works"
version = "0.1.0"
description = "Polanyi Works — semantic runtime that grounds AI agents in your database schemas, business glossary, and business rules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langchain-community>=0.4",
    "langgraph>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tenacity>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.120",
    "databricks-sql-connector>=4.0",
    "pyarrow>=15.0",
]
graph = ["neo4j>=5.0"]
gds = ["graphdatascience>=1.22"]
graphrag = ["neo4j-graphrag>=1.16"]
semantic = ["rdflib>=7.0", "pyshacl>=0.25", "pyoxigraph>=0.4", "owlready2>=0.45"]
embeddings = ["sentence-transformers>=3.0"]
nlp = ["spacy>=3.8"]
all = ["polanyi-works[databricks,graph,gds,graphrag,semantic,embeddings,nlp]"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4", "polanyi-works[all]"]

[project.scripts]
polanyi = "polanyi.cli:main"

# One installable distribution; the polanyi namespace is assembled from the
# monorepo packages/ and apps/ trees (see docs/repo-structure.md).
[tool.setuptools]
packages = [
    "polanyi",
    "polanyi.kernel",
    "polanyi.semantic",
    "polanyi.agents",
    "polanyi.execution",
    "polanyi.execution.connectors",
    "polanyi.execution.connectors.databricks",
    "polanyi.memory",
    "polanyi.api",
    "polanyi.cli",
]

[tool.setuptools.package-dir]
"polanyi" = "packages/common"
"polanyi.kernel" = "packages/kernel"
"polanyi.semantic" = "packages/semantic-runtime/semantic"
"polanyi.agents" = "packages/agent-runtime/agents"
"polanyi.execution" = "packages/execution-runtime/execution"
"polanyi.execution.connectors" = "packages/execution-runtime/execution/connectors"
"polanyi.execution.connectors.databricks" = "packages/execution-runtime/execution/connectors/databricks"
"polanyi.memory" = "packages/memory-runtime/memory"
"polanyi.api" = "apps/server/polanyi/api"
"polanyi.cli" = "apps/cli/polanyi/cli"

[tool.setuptools.package-data]
"polanyi.semantic" = ["shapes/*.ttl"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps", "infrastructure/tests"]
norecursedirs = ["node_modules", "dist", ".venv", "*.egg-info"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["packages", "apps", "tests"]
